# PCBInspection

./: .gitignore  pyproject.toml
configs/: default.yaml
configs/recipes/: _template.yaml
docs/: DATA_RELEASES.md  PLAN.md
scripts/: benchmark.py  compare_panel_models.py  data_release.py  generate_synthetic_pcb.py  grr_test.py  inject_synthetic_defects.py  prepare_anomaly_dataset.py  preview_server.py  run_alignment_poc.py  run_alignment_poc_tuned.py  run_anomaly_poc.py  test_camera.py  test_camera_pipeline.py  train_anomaly.py  train_transistor.py
src/pcb_inspection/: __init__.py  config.py
src/pcb_inspection/alignment/: fiducial.py  quality.py  registration.py
src/pcb_inspection/camera/: __init__.py  crevis.py  cvscam_ffi.py  mock.py
src/pcb_inspection/common/: geometry.py  image_utils.py  types.py  visualization.py
src/pcb_inspection/inspection/: anomaly.py  base.py  blob.py  reference.py  rule_based.py
src/pcb_inspection/io/: result_writer.py
src/pcb_inspection/judgment/: engine.py
src/pcb_inspection/pipeline/: runner.py
src/pcb_inspection/recipe/: manager.py
src/pcb_inspection/roi/: cad_parser.py  models.py  roi_generator.py
tests/: conftest.py  test_alignment.py  test_anomaly_inspector.py  test_api.py  test_feedback_store.py  test_inspection.py  test_mock_camera.py  test_notify.py  test_roi.py
