[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcb-inspection"
version = "0.1.0"
description = "ML-based PCB visual inspection system"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "anomalib>=1.0",
    "onnx>=1.16",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pcb_inspection"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
